--- a/index.html
+++ b/index.html
@@ -10,43 +10,43 @@
     />
     <meta
       name="keywords"
-      content="Eki, Eki Zulfar,Eki Zulfar Rachman, siapa Eki, Eki adalah , Siapa Eki Zulfar , ekizr"
+      content="Afgan Irwansyah Hidayat"
     />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta
       name="title"
-      content="Eki Zulfar Rachman - Profil Pengembang Front-End Web"
+      content="Afgan Irwansyah Hidayat - Student Sofware Engineering"
     />
     <meta
       name="description"
-      content="Selamat datang di website saya! Saya adalah Eki Zulfar Rachman, atau panggil saja saya 'EKI.' Saya adalah seorang pengembang web dengan fokus pada menciptakan antarmuka pengguna yang menarik dan responsif. Temukan lebih banyak tentang karya-karya saya di sini"
+      content="Selamat datang di website saya! Saya Afgan Irwansyah Hidayat, atau cukup panggil saya Afgan. Saat ini saya sedang menempuh pendidikan di jurusan Rekayasa Perangkat Lunak (Software Engineering) di SMK Taruna Bhakti. Saya adalah seorang pengembang web yang berfokus pada pembuatan antarmuka pengguna yang menarik, responsif, dan ramah pengguna. Yuk, lihat karya-karya saya di sini!"
     />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://eki.my.id/" />
+    <meta property="og:url" content="https://afganportofolio.my.id/" />
     <meta
       property="og:title"
-      content="Eki Zulfar Rachman - Profil Pengembang Front-End Web"
+      content="Afgan Irwansyah Hidayat - Student Sofware Engineering"
     />
     <meta
       property="og:description"
-      content="Selamat datang di website saya! Saya adalah Eki Zulfar Rachman, atau panggil saja saya 'EKI.' Saya adalah seorang pengembang web dengan fokus pada menciptakan antarmuka pengguna yang menarik dan responsif. Temukan lebih banyak tentang karya-karya saya di sini"
+      content="Selamat datang di website saya! Saya Afgan Irwansyah Hidayat, atau cukup panggil saya Afgan. Saat ini saya sedang menempuh pendidikan di jurusan Rekayasa Perangkat Lunak (Software Engineering) di SMK Taruna Bhakti. Saya adalah seorang pengembang web yang berfokus pada pembuatan antarmuka pengguna yang menarik, responsif, dan ramah pengguna. Yuk, lihat karya-karya saya di sini!"
     />
-    <meta property="og:image" content="https://eki.my.id/Meta.png" />
+    <meta property="og:image" content="https://afganportofolio.my.id/Meta.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://eki.my.id/" />
+    <meta property="twitter:url" content="https://afganportofolio.my.id/" />
     <meta
       property="twitter:title"
-      content="Eki Zulfar Rachman - Profil Pengembang Front-End Web"
+      content="Afgan Irwansyah Hidayat - Student Sofware Engineering"
     />
     <meta
       property="twitter:description"
-      content="Selamat datang di website saya! Saya adalah Eki Zulfar Rachman, atau panggil saja saya 'EKI.' Saya adalah seorang pengembang web dengan fokus pada menciptakan antarmuka pengguna yang menarik dan responsif. Temukan lebih banyak tentang karya-karya saya di sini"
+      content="Selamat datang di website saya! Saya Afgan Irwansyah Hidayat, atau cukup panggil saya Afgan. Saat ini saya sedang menempuh pendidikan di jurusan Rekayasa Perangkat Lunak (Software Engineering) di SMK Taruna Bhakti. Saya adalah seorang pengembang web yang berfokus pada pembuatan antarmuka pengguna yang menarik, responsif, dan ramah pengguna. Yuk, lihat karya-karya saya di sini!"
     />
-    <meta property="twitter:image" content="https://eki.my.id/Meta.png" />
+    <meta property="twitter:image" content="https://afganportofolio.my.id/Meta.png" />
     <meta name="theme-color" content="rgb(3,0,20)" />
     <meta name="msapplication-navbutton-color" content="rgb(3,0,20)" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -55,7 +55,7 @@
       content="black-translucent"
     />
 
-    <title>Eki Zulfar Rachman - Profil Pengembang Front-End Web</title>
+    <title>Afgan Irwansyah Hidayat - Student Sofware Engineering</title>
   </head>
   <body>
     <div id="root"></div>
