--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta
       name="title"
-      content="Afgan Irwansyah Hidayat - Student Sofware Engineering"
+      content="Afgan Irwansyah Hidayat"
     />
     <meta
       name="description"
@@ -24,7 +24,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://afganportofolio.my.id/" />
+    <meta property="og:url" content="https://afganworks.vercel.app/" />
     <meta
       property="og:title"
       content="Afgan Irwansyah Hidayat - Student Sofware Engineering"
@@ -37,7 +37,7 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://afganportofolio.my.id/" />
+    <meta property="twitter:url" content="https://afganworks.vercel.app/" />
     <meta
       property="twitter:title"
       content="Afgan Irwansyah Hidayat - Student Sofware Engineering"
@@ -46,7 +46,7 @@
       property="twitter:description"
       content="Selamat datang di website saya! Saya Afgan Irwansyah Hidayat, atau cukup panggil saya Afgan. Saat ini saya sedang menempuh pendidikan di jurusan Rekayasa Perangkat Lunak (Software Engineering) di SMK Taruna Bhakti. Saya adalah seorang pengembang web yang berfokus pada pembuatan antarmuka pengguna yang menarik, responsif, dan ramah pengguna. Yuk, lihat karya-karya saya di sini!"
     />
-    <meta property="twitter:image" content="https://afganportofolio.my.id/Meta.png" />
+    <meta property="twitter:image" content="https://afganworks.vercel.app/Meta.png" />
     <meta name="theme-color" content="rgb(3,0,20)" />
     <meta name="msapplication-navbutton-color" content="rgb(3,0,20)" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -55,7 +55,7 @@
       content="black-translucent"
     />
 
-    <title>Afgan Irwansyah Hidayat - Student Sofware Engineering</title>
+    <title>Afgan Irwansyah Hidayat</title>
   </head>
   <body>
     <div id="root"></div>
