--- a/index.html
+++ b/index.html
@@ -1,64 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./dist/iconweb.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="google-site-verification"
-      content="ZYNfZwMUiNwSMF3EMvY85bid2BVvB12uMMRfUNWw75A"
-    />
-    <meta
-      name="keywords"
-      content="Afgan Irwansyah Hidayat" 
-    />
-    <meta name="mobile-web-app-capable" content="yes" />
-    <meta
-      name="title"
-      content="Afgan Irwansyah Hidayat"
-    />
-    <meta
-      name="description"
-      content="Selamat datang di website saya! Saya Afgan Irwansyah Hidayat, atau cukup panggil saya Afgan. Saat ini saya sedang menempuh pendidikan di jurusan Rekayasa Perangkat Lunak (Software Engineering) di SMK Taruna Bhakti. Saya adalah seorang pengembang web yang berfokus pada pembuatan antarmuka pengguna yang menarik, responsif, dan ramah pengguna. Yuk, lihat karya-karya saya di sini!"
-    />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://afganworks.vercel.app/" />
-    <meta
-      property="og:title"
-      content="Afgan Irwansyah Hidayat - Student Sofware Engineering"
-    />
-    <meta
-      property="og:description"
-      content="Selamat datang di website saya! Saya Afgan Irwansyah Hidayat, atau cukup panggil saya Afgan. Saat ini saya sedang menempuh pendidikan di jurusan Rekayasa Perangkat Lunak (Software Engineering) di SMK Taruna Bhakti. Saya adalah seorang pengembang web yang berfokus pada pembuatan antarmuka pengguna yang menarik, responsif, dan ramah pengguna. Yuk, lihat karya-karya saya di sini!"
-    />
-    <meta property="og:image" content="https://afganportofolio.my.id/Meta.png" />
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="./dist/iconweb.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="zXvXJmkaDBGaVnXy6-SUjVrhXCgkm46jpsAsV9G-rwU" />
+  <meta name="keywords" content="Afgan Irwansyah Hidayat Portofilio" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="title" content="Afgan Irwansyah Hidayat" />
+  <meta name="description"
+    content="Selamat datang di website saya! Saya Afgan Irwansyah Hidayat, atau cukup panggil saya Afgan. Saat ini saya sedang menempuh pendidikan di jurusan Rekayasa Perangkat Lunak (Software Engineering) di SMK Taruna Bhakti. Saya adalah seorang pengembang web yang berfokus pada pembuatan antarmuka pengguna yang menarik, responsif, dan ramah pengguna. Yuk, lihat karya-karya saya di sini!" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://afganworks.vercel.app/" />
-    <meta
-      property="twitter:title"
-      content="Afgan Irwansyah Hidayat - Student Sofware Engineering"
-    />
-    <meta
-      property="twitter:description"
-      content="Selamat datang di website saya! Saya Afgan Irwansyah Hidayat, atau cukup panggil saya Afgan. Saat ini saya sedang menempuh pendidikan di jurusan Rekayasa Perangkat Lunak (Software Engineering) di SMK Taruna Bhakti. Saya adalah seorang pengembang web yang berfokus pada pembuatan antarmuka pengguna yang menarik, responsif, dan ramah pengguna. Yuk, lihat karya-karya saya di sini!"
-    />
-    <meta property="twitter:image" content="https://afganworks.vercel.app/Meta.png" />
-    <meta name="theme-color" content="rgb(3,0,20)" />
-    <meta name="msapplication-navbutton-color" content="rgb(3,0,20)" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta
-      name="apple-mobile-web-app-status-bar-style"
-      content="black-translucent"
-    />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://afganworks.vercel.app/" />
+  <meta property="og:title" content="Afgan Irwansyah Hidayat - Student Sofware Engineering" />
+  <meta property="og:description"
+    content="Selamat datang di website saya! Saya Afgan Irwansyah Hidayat, atau cukup panggil saya Afgan. Saat ini saya sedang menempuh pendidikan di jurusan Rekayasa Perangkat Lunak (Software Engineering) di SMK Taruna Bhakti. Saya adalah seorang pengembang web yang berfokus pada pembuatan antarmuka pengguna yang menarik, responsif, dan ramah pengguna. Yuk, lihat karya-karya saya di sini!" />
+  <meta property="og:image" content="https://afganportofolio.my.id/Meta.png" />
 
-    <title>Afgan Irwansyah Hidayat</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://afganworks.vercel.app/" />
+  <meta property="twitter:title" content="Afgan Irwansyah Hidayat - Student Sofware Engineering" />
+  <meta property="twitter:description"
+    content="Selamat datang di website saya! Saya Afgan Irwansyah Hidayat, atau cukup panggil saya Afgan. Saat ini saya sedang menempuh pendidikan di jurusan Rekayasa Perangkat Lunak (Software Engineering) di SMK Taruna Bhakti. Saya adalah seorang pengembang web yang berfokus pada pembuatan antarmuka pengguna yang menarik, responsif, dan ramah pengguna. Yuk, lihat karya-karya saya di sini!" />
+  <meta property="twitter:image" content="https://afganworks.vercel.app/Meta.png" />
+  <meta name="theme-color" content="rgb(3,0,20)" />
+  <meta name="msapplication-navbutton-color" content="rgb(3,0,20)" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
+  <title>Afgan Irwansyah Hidayat</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
