feat: add robots.txt

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="title" content="Afgan Irwansyah Hidayat" />
   <meta name="description"
-    content="Selamat datang di website saya! Saya Afgan Irwansyah Hidayat, atau cukup panggil saya Afgan. Saat ini saya sedang menempuh pendidikan di jurusan Rekayasa Perangkat Lunak (Software Engineering) di SMK Taruna Bhakti. Saya adalah seorang pengembang web yang berfokus pada pembuatan antarmuka pengguna yang menarik, responsif, dan ramah pengguna. Yuk, lihat karya-karya saya di sini!" />
+    content="Afgan Irwansyah Hidayat - Fullstack Developer & Student Software Engineering. Lihat karya dan proyek saya di sini!">
+  <meta name="author" content="Afgan Irwansyah Hidayat" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
